# dj_site

./: docker-compose.yml  pyproject.toml
bookshelf/account/: authentication.py  forms.py  models.py  urls.py  views.py
bookshelf/account/migrations/: 0001_initial.py  0002_customuser_contact_customuser_following_and_more.py
bookshelf/account/static/css/: base.css
bookshelf/account/templates/account/: dashboard.html  edit_profile.html  profile.html  register.html  register_done.html
bookshelf/account/templates/registration/: login.html  logout.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
bookshelf/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
bookshelf/blog/migrations/: 0001_initial.py  0002_comment.py  0003_trigram_ext.py
bookshelf/blog/static/css/: blog.css
bookshelf/blog/templates/blog/: base.html  email_share.html  index.html  post_comment.html  post_detail.html  post_form.html  search.html
bookshelf/blog/templatetags/: blog_tags.py
bookshelf/book/: admin.py  models.py  urls.py  views.py
bookshelf/book/migrations/: 0001_initial.py  0002_alter_book_options_book_book_book_title_ee4b12_idx.py  0003_alter_bookrating_book.py  0004_remove_book_isbn.py  0005_bookrating_created_at_bookrating_updated_at.py
bookshelf/bookshelf/: settings.py  urls.py
bookshelf/templates/: base.html  index.html
bookshelf/templates/components/: carousel.html  navbar.html
(+6 files in other folders)
