[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
django-taggit = "^6.1.0"
markdown = "3.6"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
social-auth-app-django = "5.4.0"
django-extensions = "3.2.3"
werkzeug = "3.0.2"
pyopenssl = "24.1.0"
